raster legends, raster ids, map race condition bug, collapsable filters, remove non-uganda regions, hierarchy bug,

--- a/src/About/styles.css
+++ b/src/About/styles.css
@@ -1,7 +1,8 @@
 .aboutWrapper{
     display: flex;
     height: 100%;
-    padding: 30px;
+    padding: 30px 13px;
+    margin-left: 400px;
 }
 
 .header{
