--- a/src/Download/styles.css
+++ b/src/Download/styles.css
@@ -1,7 +1,7 @@
 .wrapper {
 	height: 100%;
-	padding: 30px 0px;
-	margin-left: 25rem;
+	padding: 30px 13px;
+	margin-left: 400px;
 }
 .downloadItem {
 	margin-bottom: 25px;
